--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -3,8 +3,11 @@ name: Deploy static content to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
+  # push:
+  #   branches: ["main"]
+
+  schedule:
+    - cron: '0 18 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
