--- a/.github/workflows/update-tag-doc.yml
+++ b/.github/workflows/update-tag-doc.yml
@@ -39,9 +39,10 @@ jobs:
         rm -rf \
           ${{ env.TAGMARK_UI_DIR }}/.git* \
           ${{ env.TAGMARK_UI_DIR }}/*.md \
-          tagmark-ui/LICENSE \
+          ${{ env.TAGMARK_UI_DIR }}/LICENSE \
           ${{ env.TAGMARK_UI_DIR }}/Makefile \
-          ${{ env.TAGMARK_UI_DIR }}/data/
+          ${{ env.TAGMARK_UI_DIR }}/data/ \
+          ${{ env.TAGMARK_UI_DIR }}/docs/tag-doc.*
         cp -rf ${{ env.TAGMARK_UI_DIR }}/* ./
         rm -rf ${{ env.TAGMARK_UI_DIR }}
 
