infra.ci>modify.new: add new trigger conditions

--- a/.github/workflows/update-tag-doc.yml
+++ b/.github/workflows/update-tag-doc.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'docs/tag-doc.template'
+      - 'data/tagmarks.jsonl'
+      - 'data/tags.json'
   
   workflow_dispatch:
 
